# typepaste

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  engine.rs  error.rs  main.rs
src/platform/: fallback.rs  macos.rs  mod.rs  windows.rs
src/ui/: mod.rs  settings.rs
