[package]
name = "typepaste"
version = "0.1.0"
edition = "2021"
authors = ["f0lken"]
description = "Paste clipboard text anywhere via keystroke emulation — even into remote desktops that don't support direct paste"
license = "MIT"
repository = "https://github.com/f0lken/typepaste"
keywords = ["clipboard", "paste", "keystroke", "remote-desktop", "automation"]
categories = ["os", "accessibility"]

[dependencies]
# Clipboard access
arboard = "3"
# Logging
log = "0.4"
env_logger = "0.11"
# Error handling
thiserror = "2"
# Serialization for config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Directories for config storage
dirs = "6"
# Random delay jitter
rand = "0.8"

# Cross-platform keyboard simulation
enigo = "0.3"

# Global hotkeys
global-hotkey = "0.6"

# System tray
tray-icon = "0.19"

# Event loop (required for tray + hotkeys on all platforms)
winit = { version = "0.30", features = ["rwh_06"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[profile.release]
opt-level = "z"   # Optimize for size
lto = true
strip = true
codegen-units = 1
