[package]
name = "typepaste"
version = "0.4.0"
edition = "2021"
authors = ["hakimaru@gmail.com"]
description = "Paste text anywhere via keystroke emulation — works in VMs, RDP, and restricted apps"
license = "MIT"
repository = "https://github.com/f0lken/typepaste"
keywords = ["keyboard", "automation", "remote-desktop", "clipboard", "accessibility"]
categories = ["command-line-utilities", "accessibility"]

[[bin]]
name = "typepaste"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
dirs = "5"
rand = "0.8"
arboard = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.23", features = ["highsierra"] }
core-foundation = "0.9"
winit = "0.30"
tray-icon = "0.17"
global-hotkey = "0.6"
eframe = "0.29"
egui = "0.29"
image = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.2"
winit = "0.30"
tray-icon = "0.17"
global-hotkey = "0.6"
eframe = "0.29"
egui = "0.29"
image = "0.25"
[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
